Updates langauge line crud

--- a/lang/en.json
+++ b/lang/en.json
@@ -7,6 +7,7 @@
     "API Tokens": "API Tokens",
     "API tokens allow third-party services to authenticate with our application on your behalf.": "API tokens allow third-party services to authenticate with our application on your behalf.",
     "Add additional security to your account using two factor authentication.": "Add additional security to your account using two factor authentication.",
+    "Aiutiamo il tuo business a farsi <span class=\"wab-highlight\">notare</span> in un mondo digitale": "Aiutiamo il tuo business a farsi <span class=\"wab-highlight\">notare</span> in un mondo digitale",
     "Already registered?": "Already registered?",
     "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.",
     "Are you sure you would like to delete this API token?": "Are you sure you would like to delete this API token?",
