added service pages

--- a/lang/en.json
+++ b/lang/en.json
@@ -67,6 +67,7 @@
     "Remove Photo": "Remove Photo",
     "Resend Verification Email": "Resend Verification Email",
     "Reset Password": "Reset Password",
+    "SIAMO <span class=\"wab-highlight\">\n                    WEB</span>&nbsp;<span class=\"wab-highlight\">\n                    ARTISAN</span>&nbsp;<span class=\"wab-highlight\">BROS</span>": "SIAMO <span class=\"wab-highlight\">\n                    WEB</span>&nbsp;<span class=\"wab-highlight\">\n                    ARTISAN</span>&nbsp;<span class=\"wab-highlight\">BROS</span>",
     "Save": "Save",
     "Saved.": "Saved.",
     "Select A New Photo": "Select A New Photo",
