Updates translations mechanism

--- a/lang/it.json
+++ b/lang/it.json
@@ -36,7 +36,6 @@
     "DESIGN</span> DI <span\n          class=\"wab-highlight\">QUALITÀ</span> PER LA TUA ATTIVITÀ ONLINE": "DESIGN</span> DI <span\n          class=\"wab-highlight\">QUALITÀ</span> PER LA TUA ATTIVITÀ ONLINE",
     "DOMANDE</span>\n      FREQUENTI, <span class=\"wab-highlight\">RISPOSTE</span> TEMPESTIVE": "DOMANDE</span>\n      FREQUENTI, <span class=\"wab-highlight\">RISPOSTE</span> TEMPESTIVE",
     "Dall\\'<span class=\"wab-highlight\">idea</span> alla <span class=\"wab-highlight\">realtà</span> in pochi\n    step:": "Dall\\'<span class=\"wab-highlight\">idea</span> alla <span class=\"wab-highlight\">realtà</span> in pochi\n    step:",
-    "Dashboard": "Dashboard",
     "Delete": "Delete",
     "Delete API Token": "Delete API Token",
     "Delete Account": "Delete Account",
@@ -54,6 +53,7 @@
     "Finish enabling two factor authentication.": "Finish enabling two factor authentication.",
     "Forgot your password?": "Forgot your password?",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.",
+    "Grazie per averci contattato! Ti risponderemo il prima possibile!": "Grazie per averci contattato! Ti risponderemo il prima possibile!",
     "HAI <span class=\"wab-highlight\">DOMANDE?</span>\n      ABBIAMO LE <span class=\"wab-highlight\">RISPOSTE!": "HAI <span class=\"wab-highlight\">DOMANDE?</span>\n      ABBIAMO LE <span class=\"wab-highlight\">RISPOSTE!",
     "Hai <span class=\"wab-highlight\">domande?</span>\n      Abbiamo le <span class=\"wab-highlight\">risposte.": "Hai <span class=\"wab-highlight\">domande?</span>\n      Abbiamo le <span class=\"wab-highlight\">risposte.",
     "I agree to the :terms_of_service and :privacy_policy": "I agree to the :terms_of_service and :privacy_policy",
@@ -64,18 +64,13 @@
     "IL <span class=\"wab-highlight\">SOFTWARE</span> SU MISURA PER IL TUO\n          BUSINESS": "IL <span class=\"wab-highlight\">SOFTWARE</span> SU MISURA PER IL TUO\n          BUSINESS",
     "IL NOSTRO LAVORO E&#39 UN <span class=\"wab-highlight\">ARTE": "IL NOSTRO LAVORO E&#39 UN <span class=\"wab-highlight\">ARTE",
     "IL TUO SITO WEB, LA <span class=\"wab-highlight\">TUA</span> <span\n          class=\"wab-highlight\">IMMAGINE": "IL TUO SITO WEB, LA <span class=\"wab-highlight\">TUA</span> <span\n          class=\"wab-highlight\">IMMAGINE",
-    "INVIA MESSAGGIO": "INVIA MESSAGGIO",
     "If necessary, you may log out of all of your other browser sessions across all of your devices. Some of your recent sessions are listed below; however, this list may not be exhaustive. If you feel your account has been compromised, you should also update your password.": "If necessary, you may log out of all of your other browser sessions across all of your devices. Some of your recent sessions are listed below; however, this list may not be exhaustive. If you feel your account has been compromised, you should also update your password.",
     "Il design è pensare con gli occhi.": "Il design è pensare con gli occhi.",
     "Il mondo online è come un grande magazzino, e il tuo sito web è la <span\n      class=\"wab-highlight\">vetrina</span> che attira l\\'attenzione dei <span class=\"wab-highlight\">clienti": "Il mondo online è come un grande magazzino, e il tuo sito web è la <span\n      class=\"wab-highlight\">vetrina</span> che attira l\\'attenzione dei <span class=\"wab-highlight\">clienti",
     "Il processo di <span class=\"wab-highlight\">design</span> <span class=\"wab-highlight\">digitale</span> in 4\n    semplici fasi:": "Il processo di <span class=\"wab-highlight\">design</span> <span class=\"wab-highlight\">digitale</span> in 4\n    semplici fasi:",
     "Il servizio di <span class=\"wab-highlight\">sviluppo</span> <span class=\"wab-highlight\">software</span> <span class=\"wab-highlight\">personalizzato</span> è\n          come la confezione di un vestito su misura, fatta apposta per te. Invece di scegliere un software preconfezionato che potrebbe non soddisfare tutte le tue esigenze, noi creiamo un software appositamente per te, tenendo conto di ogni <span class=\"wab-highlight\">dettaglio</span> e delle tue specifiche\n          richieste. È come avere un abito cucito <span class=\"wab-highlight\">su</span> <span class=\"wab-highlight\">misura</span> per la tua azienda, che si adatta perfettamente a tutte le\n          tue esigenze e ti fa risplendere in ogni occasione.": "Il servizio di <span class=\"wab-highlight\">sviluppo</span> <span class=\"wab-highlight\">software</span> <span class=\"wab-highlight\">personalizzato</span> è\n          come la confezione di un vestito su misura, fatta apposta per te. Invece di scegliere un software preconfezionato che potrebbe non soddisfare tutte le tue esigenze, noi creiamo un software appositamente per te, tenendo conto di ogni <span class=\"wab-highlight\">dettaglio</span> e delle tue specifiche\n          richieste. È come avere un abito cucito <span class=\"wab-highlight\">su</span> <span class=\"wab-highlight\">misura</span> per la tua azienda, che si adatta perfettamente a tutte le\n          tue esigenze e ti fa risplendere in ogni occasione.",
-    "Il tuo messaggio": "Il tuo messaggio",
-    "Il tuo nome": "Il tuo nome",
-    "Il tuo telefono": "Il tuo telefono",
     "Immagina che hai un\\'idea per un\\'applicazione fantastica ma non sai da dove iniziare. Ecco\n          dove entra in\n          gioco il nostro servizio di sviluppo software personalizzato! Il nostro team di sviluppatori esperti lavora\n          alacremente per creare un software su misura per le tue <span class=\"wab-highlight\">esigenze</span> <span class=\"wab-highlight\">specifiche</span>.\n          In pratica, ti <span class=\"wab-highlight\">ascoltiamo</span> <span class=\"wab-highlight\">attentamente</span> per capire ciò che desideri e poi lavoriamo con te per creare un\n          software che soddisfi tutte le tue esigenze. Ti teniamo <span class=\"wab-highlight\">aggiornato</span> durante tutto il processo, perché vogliamo\n          che tu sia <span class=\"wab-highlight\">coinvolto</span> e felice del <span class=\"wab-highlight\">prodotto</span> <span class=\"wab-highlight\">finale</span>.": "Immagina che hai un\\'idea per un\\'applicazione fantastica ma non sai da dove iniziare. Ecco\n          dove entra in\n          gioco il nostro servizio di sviluppo software personalizzato! Il nostro team di sviluppatori esperti lavora\n          alacremente per creare un software su misura per le tue <span class=\"wab-highlight\">esigenze</span> <span class=\"wab-highlight\">specifiche</span>.\n          In pratica, ti <span class=\"wab-highlight\">ascoltiamo</span> <span class=\"wab-highlight\">attentamente</span> per capire ciò che desideri e poi lavoriamo con te per creare un\n          software che soddisfi tutte le tue esigenze. Ti teniamo <span class=\"wab-highlight\">aggiornato</span> durante tutto il processo, perché vogliamo\n          che tu sia <span class=\"wab-highlight\">coinvolto</span> e felice del <span class=\"wab-highlight\">prodotto</span> <span class=\"wab-highlight\">finale</span>.",
     "Immagina di essere <span class=\"wab-highlight\">un\\'impresa</span> <span class=\"wab-highlight\">tradizionale</span> che vuole abbracciare la <span class=\"wab-highlight\">trasformazione</span>\n          <span class=\"wab-highlight\">digitale</span> ma non sa da dove cominciare. Noi possiamo aiutarti a passare dal tempo dei dinosauri all\\'era\n          digitale, senza dover fare un salto nel futuro come Marty McFly in \"Ritorno al futuro\"!": "Immagina di essere <span class=\"wab-highlight\">un\\'impresa</span> <span class=\"wab-highlight\">tradizionale</span> che vuole abbracciare la <span class=\"wab-highlight\">trasformazione</span>\n          <span class=\"wab-highlight\">digitale</span> ma non sa da dove cominciare. Noi possiamo aiutarti a passare dal tempo dei dinosauri all\\'era\n          digitale, senza dover fare un salto nel futuro come Marty McFly in \"Ritorno al futuro\"!",
-    "Inserisci il tuo messaggio": "Inserisci il tuo messaggio",
     "LA <span class=\"wab-highlight\">RISPOSTA</span>\n      ALLE TUE <span class=\"wab-highlight\">DOMANDE</span>, A PORTATA DI MANO!": "LA <span class=\"wab-highlight\">RISPOSTA</span>\n      ALLE TUE <span class=\"wab-highlight\">DOMANDE</span>, A PORTATA DI MANO!",
     "LA <span class=\"wab-highlight\">TUA</span> <span\n          class=\"wab-highlight\">APP</span> SU MISURA, SVILUPPATA CON <span class=\"wab-highlight\">CURA": "LA <span class=\"wab-highlight\">TUA</span> <span\n          class=\"wab-highlight\">APP</span> SU MISURA, SVILUPPATA CON <span class=\"wab-highlight\">CURA",
     "LA NOSTRA <span class=\"wab-highlight\">SPECIALITÀ!": "LA NOSTRA <span class=\"wab-highlight\">SPECIALITÀ!",
@@ -93,7 +88,6 @@
     "Mario Rossi": "Mario Rossi",
     "Name": "Name",
     "New Password": "New Password",
-    "Nome": "Nome",
     "Non c\\'è <span class=\"wab-highlight\">trasformazione</span> <span\n              class=\"wab-highlight\">digitale</span> troppo grande o troppo piccola per noi!": "Non c\\'è <span class=\"wab-highlight\">trasformazione</span> <span\n              class=\"wab-highlight\">digitale</span> troppo grande o troppo piccola per noi!",
     "Non è <span class=\"wab-highlight\">magia,</span> è solo il\n            nostro software!": "Non è <span class=\"wab-highlight\">magia,</span> è solo il\n            nostro software!",
     "Ogni progetto che realizziamo è un\\'<span class=\"wab-highlight\">opera</span> <span\n            class=\"wab-highlight\">unica</span>, creata con <span class=\"wab-highlight\">passione</span> e maestria <span\n            class=\"wab-highlight\">artigianale.": "Ogni progetto che realizziamo è un\\'<span class=\"wab-highlight\">opera</span> <span\n            class=\"wab-highlight\">unica</span>, creata con <span class=\"wab-highlight\">passione</span> e maestria <span\n            class=\"wab-highlight\">artigianale.",
@@ -154,8 +148,14 @@
     "You have not enabled two factor authentication.": "You have not enabled two factor authentication.",
     "You may delete any of your existing tokens if they are no longer needed.": "You may delete any of your existing tokens if they are no longer needed.",
     "Your email address is unverified.": "Your email address is unverified.",
-    "campo obbligatorio": "campo obbligatorio",
     "esperienze digitali <span class=\"wab-highlight\">artigianali": "esperienze digitali <span class=\"wab-highlight\">artigianali",
+    "mail_contact-admin-notify.subject": "mail_contact-admin-notify.subject",
     "mario.rossi@gmail.com": "mario.rossi@gmail.com",
-    "name@example.com": "name@example.com"
+    "validations.email_email": "validations.email_email",
+    "validations.email_max": "validations.email_max",
+    "validations.email_required": "validations.email_required",
+    "validations.message_required": "validations.message_required",
+    "validations.name_max": "validations.name_max",
+    "validations.name_required": "validations.name_required",
+    "validations.phone_max": "validations.phone_max"
 }
